--- a/config/config.env
+++ b/config/config.env
@@ -1,1 +1,4 @@
+PORT=5000
+NODE_ENV=development
+
 MONGO_URL=mongodb+srv://1:1@realestate.ivizh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
