--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
 		"lint": "eslint .",
-		"lintfix": "eslint . --fix",
+		"lint-fix": "eslint . --fix",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "cross-env NODE_ENV=production nodemon server.js",
